Fix locked page tab vertical alignment
Again...

--- a/app/stylesheets/alchemy/admin/frame.scss
+++ b/app/stylesheets/alchemy/admin/frame.scss
@@ -68,20 +68,24 @@ div#overlay_text_box {
 
   .page_status_and_name {
     align-items: center;
-    padding: var(--spacing-1) var(--spacing-2);
+    padding: 0 var(--spacing-2);
+    height: 100%;
     background-color: var(--toolbar-bg-color);
     text-shadow: var(--text-shadow-light);
     @extend .disable-user-select;
     @extend .locked_page;
     cursor: default;
     border-bottom-color: var(--toolbar-bg-color);
-  }
 
-  .page_name {
-    margin-right: var(--spacing-1);
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    .page_status {
+      margin-left: var(--spacing-1);
+      margin-bottom: 0;
+
+      // The lock icon is a bit too high, so we need to adjust it
+      &:last-child {
+        margin-bottom: 1px;
+      }
+    }
   }
 }
 
